// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrainModal.vue add requirements renders correctly 1`] = `
<bhmodal-stub open="true" backgroundcloses="true">
  <div class="train-modal">
    <h1>Train Status</h1>
    <div>
      <table>
        <thead>
          <tr>
            <th>English is not ready to train</th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>requirement 1</td>
          </tr>
        </tbody>
      </table>
    </div>
    <!---->
    <div class="bh-grid bh-grid--space-between train-modal__buttons">
      <div class="train-modal__flags">
        <div class="train-modal__flags__item">
          <bhlanguageflag-stub language="en"></bhlanguageflag-stub>
          <bhicon-stub value="check" size="small" class="train-modal__flags__item__status train-modal__flags__item__status--ready"></bhicon-stub>
        </div>
      </div>
      <div>
        <bhbutton-stub primary="true" type="button">
          <bhicon-stub value="school"></bhicon-stub> <span>Train</span>
        </bhbutton-stub>
      </div>
    </div>
  </div>
</bhmodal-stub>
`;

exports[`TrainModal.vue renders correctly 1`] = `
<bhmodal-stub open="true" backgroundcloses="true">
  <div class="train-modal">
    <h1>Train Status</h1>
    <div>
      <p>You don't have any pendency to train.</p>
    </div>
    <div class="bh-grid bh-grid--space-between train-modal__buttons">
      <div class="train-modal__flags">
        <div class="train-modal__flags__item">
          <bhlanguageflag-stub language="en"></bhlanguageflag-stub>
          <bhicon-stub value="check" size="small" class="train-modal__flags__item__status train-modal__flags__item__status--ready"></bhicon-stub>
        </div>
      </div>
      <div>
        <bhbutton-stub primary="true" type="button">
          <bhicon-stub value="school"></bhicon-stub> <span>Train</span>
        </bhbutton-stub>
      </div>
    </div>
  </div>
</bhmodal-stub>
`;
